# pkg/controller/admin/cluster/cluster.go
@@ -28,7 +28,7 @@ func RegisterUserClusterRoutes(mgm *gin.RouterGroup) {
 // @Summary 获取文件类型的集群选项
 // @Description 获取所有已发现集群的kubeconfig文件名列表，用于下拉选项
 // @Security BearerAuth
-// @Success 200 {object} amis.Response
+// @Success 200 {object} string
 // @Router /admin/cluster/file/option_list [get]
 func (a *Controller) FileOptionList(c *gin.Context) {
 	clusters := service.ClusterService().AllClusters()
@@ -61,7 +61,7 @@ func (a *Controller) FileOptionList(c *gin.Context) {
 // @Summary 扫描集群
 // @Description 扫描本地Kubeconfig文件目录以发现新的集群
 // @Security BearerAuth
-// @Success 200 {object} amis.Response "ok"
+// @Success 200 {object} string
 // @Router /admin/cluster/scan [post]
 func (a *Controller) Scan(c *gin.Context) {
 	service.ClusterService().Scan()
@@ -72,7 +72,7 @@ func (a *Controller) Scan(c *gin.Context) {
 // @Description 重新连接一个已断开的集群
 // @Security BearerAuth
 // @Param cluster path string true "Base64编码的集群ID"
-// @Success 200 {object} amis.Response "已执行，请稍后刷新"
+// @Success 200 {object} string "已执行，请稍后刷新"
 // @Router /admin/cluster/{cluster}/reconnect [post]
 func (a *Controller) Reconnect(c *gin.Context) {
 	clusterBase64 := c.Param("cluster")
@@ -89,7 +89,7 @@ func (a *Controller) Reconnect(c *gin.Context) {
 // @Description 断开一个正在运行的集群的连接
 // @Security BearerAuth
 // @Param cluster path string true "Base64编码的集群ID"
-// @Success 200 {object} amis.Response "已执行，请稍后刷新"
+// @Success 200 {object} string "已执行，请稍后刷新"
 // @Router /admin/cluster/{cluster}/disconnect [post]
 func (a *Controller) Disconnect(c *gin.Context) {
 	clusterBase64 := c.Param("cluster")
